# ccsp-mta-agent

./: CONTRIBUTING.md  Makefile.am  Makefile.orig  cmpnt_build_custom_pre_arm.mk  cmpnt_build_custom_pre_pc.mk  configure.ac  genautotools.ini
arch/intel_usg/boards/rdkb_arm/: cmpnt_build_custom_pre.mk
config/: CcspMtaAgent.xml  CcspMtaAgent_arm.xml  CcspMtaLib_arm.cfg
config-arm/: CcspMta.cfg  CcspMtaAgent.xml  CcspMtaLib.cfg
config-mips/: CcspMta.cfg  CcspMtaAgent.xml  CcspMtaLib.cfg
config-pc/: CcspMtaAgent.xml
lib/: libmta_tr181.so.0  libmta_tr181.so.0.0.0
scripts/: mta_overcurrentfault_status.sh
source/: Makefile.am
source/Custom/: mta_custom.h
source/MtaAgentSsp/: CcspMtaAgentSsp  Makefile.am  TR104.c  TR104.h  TR104_webconfig.c  ssp_action.c  ssp_global.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/TR-181/include/: cosa_x_cisco_com_mta_apis.h  cosa_x_lgi_com_mta_apis.h
source/TR-181/integration_src.shared/: Makefile.am  cosa_x_cisco_com_mta_apis.c  cosa_x_lgi_com_mta_apis.c
source/TR-181/middle_layer_src/: Makefile.am  cosa_apis_util.h  cosa_x_cisco_com_mta_dml.c  cosa_x_cisco_com_mta_dml.h  cosa_x_cisco_com_mta_internal.c  cosa_x_cisco_com_mta_internal.h  cosa_x_lgi_com_mta_dml.c  cosa_x_lgi_com_mta_dml.h  cosa_x_lgi_com_mta_internal.c  cosa_x_lgi_com_mta_internal.h  plugin_main.c  plugin_main_apis.c  plugin_main_apis.h
source/test/: Makefile.am  gtest_main.cpp
